# AI-Project

./: ai  layered.py  main.py  newnn.py  nn.py  pyproject.toml
models/: adv  adv1  ai  chat10  chat3  chat3l  nanochat  nanochat0  nanochat2  new  nn
training_data/: chat.json  test.json
